2004-03-23  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: %ni and %Ni instead of %in and %IN.

2004-03-23  Daniel Macks  <dmacks@netspace.org>

	* Package.pm: always expand_percent invariant portion of Package.
	* PkgVersion.pm: %in is invariant portion of Package, %IN is
	invariant portion of parent Package; %n reverted to whole Package.

2004-03-23  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: get_custom_mirror() now takes $suffix param.

2004-03-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Allow non-consecutive SourceN (and related
	fields). Renamed get_param_with_expansion => param_expanded to
	fit naming convention, and added param_default_expanded.
	Distinguishing between SourceN fields is now done by suffix,
	using get_source_suffices().
	* Engine.pm: Modified to use suffix-indexed SourceN.

2004-03-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Forgot to include SplitOff (i.e., N=[null]).

2004-03-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Fixed regex error in params_matching for SplitOffN.

2004-03-18  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: %p/src isn't reliable (FetchAltDir and Buildpath
	in fink.conf), so warn if it's used.

2004-03-18  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Prohibit SourceN:none (Source:none still okay).

2004-03-18  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Hacks to keep emacs paren balancing from getting
	confused. Changed regex match m#pattern# to /pattern/ so it
	doesn't look like a comment, and added POD line containing a dummy
	closing ")" where a pattern had $) which looks like a variable.

2004-03-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: improve regex to find SplitOffN fields
	* Validation.pm: For *N* fields, improve checking of N to allow
	any number of digits but no N=1 or leading zeros. Consolidate
	Source* vs. Source*-MD5 correspondence checks (all Validation.pm