@@ -1,3 +1,7 @@
+2004-03-26  Daniel Macks  <dmacks@netspace.org>
+
+	* PkgVersion.pm: handle SplitOff(N) in numerical order.
+
 2004-03-23  Daniel Macks  <dmacks@netspace.org>
 
 	* PkgVersion.pm: %ni and %Ni instead of %in and %IN.
